--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- ヘッダー（名前の表示など） -->
   <header>
-    <h1>太郎</h1> <!-- 自分の名前に変更してOK -->
-    <p>マイヴァンクアン</p>
+    <h1>mai van quang</h1> <!-- 自分の名前に変更してOK -->
+    <p>こんにちは！</p>
   </header>
 
   <!-- メインコンテンツ -->
